# Curseach

./: CMakeLists.txt  README.md  main.cpp
classes/Account/: Admin.cpp  Loginable.h  User.h
classes/Train/: Carriage.cpp  Carriage.h  Ticket.cpp  Ticket.h  Train.cpp  Train.h  Trip.cpp  Trip.h
entities/: CommandHandler.cpp  CommandHandler.h  LifeCircle.cpp  LifeCircle.h  Ticket.cpp  Ticket.h
entities/Account/: Admin.h  Loginable.cpp  Loginable.h  User.cpp  User.h
entities/Train/: Carriage.cpp  Carriage.h  Ticket.cpp  Ticket.h  Train.cpp  Train.h  Trip.cpp  Trip.h
